--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>11</java.version>
+        <java.version>21</java.version>
     </properties>
     <build>
         <plugins>
@@ -136,6 +136,18 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>1.10.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.2.1</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
@@ -148,7 +160,7 @@
                         <version>1.6.0</version>
                         <configuration>
                             <!-- Parameterized mainClass -->
-                            <mainClass>cat.iesesteveterradas.dbapi.AppMain</mainClass>
+                            <mainClass>${exec.mainClass}</mainClass>
                         </configuration>
                     </plugin>
                 </plugins>
