--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,11 @@
             <artifactId>java-jwt</artifactId>
             <version>4.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.7.2</version> <!-- La versión puede variar -->
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
